1. Update README.md 3. Add trigger feature 3. Update the kbeaconlib to v1.04 version.

--- a/eddystonedemo/src/main/res/values/strings.xml
+++ b/eddystonedemo/src/main/res/values/strings.xml
@@ -128,7 +128,7 @@
     <string name="BEACON_NEW_PWD_EXP">(6 character)</string>
 
     <string name="BEACON_DOWNLOAD">Download data</string>
-
+    <string name="BEACON_SEND_CMD">Send command</string>
     <string name="DISCOVER_SRV">DiscoverServing</string>
     <string name="devMenuUpload">Save</string>
     <string name="EddyURLDesc">Eddystone URL setting:</string>
@@ -243,4 +243,6 @@
     <string name="bluetooth_error_need_reboot">Android OS Bluetooth error, please try to reboot bluetooth function(turn off bluetooth and turn on bluetooth). If it still failed, please try to reboot the phone.</string>
 
     <string name="double_click_quit">Double click to quit app</string>
+
+    <string name="ring_device">Ring device</string>
 </resources>
