--- a/ibeacondemo/src/main/res/values/strings.xml
+++ b/ibeacondemo/src/main/res/values/strings.xml
@@ -243,9 +243,10 @@
     <string name="double_click_quit">Double click to quit app</string>
 
     <string name="test_command">Other test command:</string>
-    <string name="ring_device_btn_title">Ring device</string>
+    <string name="reset_device_btn_title">Reset configuration</string>
 
     <string name="enable_btn_trigger">Enable Btn Trigger</string>
+    <string name="enable_th_trigger">Enable T&amp;H Trigger</string>
 
     <string name="DEVICE_DFU_TITLE">Firmware Update</string>
     <string name="DEVICE_DFU_STATUS">Status</string>
@@ -274,6 +275,22 @@
     <string name="UPDATE_NOT_FOUND_NEW_VERSION">Failed to obtain the latest version information, please ensure that the Internet connection is successful.</string>
 
     <string name="DFU_VERSION_MAKE_SURE">To ensure a successful upgrade, it is recommended that the distance between the mobile phone and the KBeacon device be less than 3 meters. Are you sure you want to upgrade?</string>
+    <string name="EXPORT_HISTORY_DATA_EMAIL_TITLE">Sensor data about device(mac:%1$s)</string>
 
     <string name="update_ibeacon_2_tlm">iBeacon2TLM</string>
+    <string name="BEACON_TEMP_UINT">°C</string>
+    <string name="BEACON_HUM">Humidity:</string>
+    <string name="LOAD_MOVING_DATA_FAILED">Load movement record timeout.</string>
+    <string name="load_data_complete">Read data complete, update %1$d records.</string>
+    <string name="load_data_complete_no_more_data">Read %1$d records, no more data</string>
+    <string name="track_clear_fail">Clear history data failed, please try it again later</string>
+    <string name="track_clear_success">Clear history data success</string>
+    <string name="no_data_to_export">No data need to export</string>
+    <string name="track_clear_history_desc">Once you clear the record, all distancing records will be lost, are you sure you want to continue?</string>
+    <string name="VIEW_TEMP_HUMIDITY_HISTORY">View T&amp;H History</string>
+    <string name="track_alarm_history_clear">Clear</string>
+    <string name="track_alarm_history_export">Export</string>
+
+
+
 </resources>
